--- a/styles/style.css
+++ b/styles/style.css
@@ -220,10 +220,11 @@ footer {
     margin-top: 5px;
     padding-top: 5px;
   }
-  ul {
+  nav ul {
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin:0;
   }
   .section-container .projects-container {
     display: grid;
