--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,7 @@ footer {
     flex-direction: column;
     align-items: center;
     margin:0;
+    margin-right: 0;
   }
   .section-container .projects-container {
     display: grid;
