--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,12 @@ body {
   background-color: white;
   font-weight: 400;
 }
+a {
+  color: black;
+}
+a:hover {
+  color: #0466c8;
+}
 main {
    padding: 0 8% 0 8%;
 }
@@ -42,6 +48,13 @@ nav ul a {
   height: max-content;
   transition: color 0.5s ease-in-out;
   text-decoration: none;
+}
+.external-links-list {
+  padding: 0;
+  width: 50%;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
 }
 a[href="#contact"] {
   border: none;
@@ -99,8 +112,13 @@ section, article, p {
   border-radius: 1rem;
   color: white;
 }
-main a {
+.project-item a {
   color: white;
+}
+.project-item a:hover {
+  color:#0466c8;
+}
+main a {
   text-decoration: none;
   font-weight: bold;
 }
@@ -140,6 +158,9 @@ main a:hover {
 #cpp-skill{
   background-color: #044F88;
 }
+#accomplishments a{
+  color: black;
+}
 form {
   width: 50%;
   margin: 0 auto;
@@ -149,6 +170,11 @@ fieldset{
   background-color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+fieldset button {
+  width: 25%;
+
 }
 legend{
     padding: 2rem;
@@ -156,9 +182,31 @@ legend{
     background: #002855;
     color: white;
 }
-form input, form textarea, form label{
-  width: 50%;
-  margin: 0 auto;
+form input, form textarea, form label, button{
+  width: 80%;
+  outline-color:#044F88;
+}
+form input, form textarea {
+  padding: 5px;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+form textarea {
+  padding-bottom: 100px;
+}
+form label, button[type="submit"]{
+  margin-top: 10px;
+}
+button[type="submit"]{
+  background-color: #002855;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: none;
+}
+button[type="submit"]:hover {
+  cursor: pointer;
+  background-color: #044F88;
 }
 footer {
   background-color: rgba(0, 0, 0, 0.9);
@@ -175,6 +223,13 @@ footer {
   .projects-container {
     grid-template-columns: 1fr 1fr;
   }
+  form {
+    width: 70%;
+    padding-bottom: 50px;
+  }
+  form fieldset {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -190,7 +245,7 @@ footer {
   }
   nav ul {
     gap: 4px;
-    margin-right: 30px;
+    margin-right: 100px;
   }
   #about {
     display: grid;
@@ -204,6 +259,13 @@ footer {
   }
    p{
     width: 80%;
+  }
+  form {
+    width: 80%;
+    padding-bottom: 50px;
+  }
+  form fieldset {
+    width: 100%;
   }
 }
 
@@ -232,9 +294,12 @@ footer {
     grid-template-columns: 100%;
     grid-template-rows: auto auto auto auto;
   }
-  form fieldset {
+  form {
     width: 100%;
     padding-bottom: 50px;
+  }
+  form fieldset {
+    width: 100%;
   }
   #contact form {
     width: 100%;
