--- a/styles/style.css
+++ b/styles/style.css
@@ -203,6 +203,7 @@ button[type="submit"]{
   padding: 20px;
   border-radius: 10px;
   border: none;
+  text-align: center;
 }
 button[type="submit"]:hover {
   cursor: pointer;
@@ -310,5 +311,9 @@ footer {
   }
   #skills-container{
     grid-template-columns: 1fr 1fr;
+  }
+  #database-skill {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
   }
 }
